Fri May 22 16:48:32 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* NEWS: added news for net-telnet and rake

Thu May 21 20:27:07 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in (RUBY_DTRACE_POSTPROCESS): cmp -b is GNU extension.
	  darwin uses GNU cmp, and FreeBSD and Solaris are not.
	  Note that accidentally equals to expected result.

Thu May 21 18:00:19 2015  Koichi Sasada  <ko1@atdot.net>

	* iseq.c: constify.

	* iseq.h: ditto.

	* method.h: ditto.

	* proc.c: ditto.

	* vm_method.c: ditto.

Thu May 21 17:44:53 2015  Koichi Sasada  <ko1@atdot.net>

	* proc.c: fix issues caused by binding created from Method#to_proc.
	  [Bug #11163]

	* vm.c (vm_cref_new_toplevel): export as rb_vm_cref_new_toplevel().

	* test/ruby/test_method.rb: add some assersions.

Thu May 21 17:29:26 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/matrix.rb: added documentation for Matrix#empty and Matrix#/
	  [Feature #10070][ruby-dev:48433] Patch by @gogotanaka

Thu May 21 17:02:43 2015  Koichi Sasada  <ko1@atdot.net>

	* proc.c: rename functions.
	  * method_get_def() -> method_def()
	  * method_get_iseq() -> method_def_iseq()
	  * method_get_cref() -> method_cref()

Thu May 21 16:52:44 2015  Koichi Sasada  <ko1@atdot.net>

	* proc.c (rb_method_get_iseq): rename to rb_method_iseq.

	* iseq.c: catch up this fix.

	* iseq.h: commit ditto.

Thu May 21 15:41:45 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/net/telnet.rb: gemify net-telnet.
	  [Feature #11083]
	* gems/bundled_gems: added net-telnet to bundled gems.

Thu May 21 15:37:32 2015  Zachary Scott  <e@zzak.io>

        * vm_method.c: Remove private attribute warning [Bug #10967]
          Patch by @spastorino [Fixes GH-849]
          https://github.com/ruby/ruby/pull/849

        * test/ruby/test_module.rb: Update test for changes

Thu May 21 10:59:43 2015  Koichi Sasada  <ko1@atdot.net>

	* proc.c (method_proc): rename to method_to_proc.

Thu May 21 10:51:54 2015  Jake Worth  <jakeworth82@gmail.com>
