@@ -1,3 +1,11 @@
+Fri May 22 19:42:06 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* process.c (rb_spawn_process): do not discard global escape
+	  status.  [ruby-core:69304] [Bug #11166]
+
+	* process.c (rb_execarg_spawn): extract the start procedure in a
+	  parent process with ensuring the end procedure.
+
 Fri May 22 16:48:32 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
 
 	* NEWS: added news for net-telnet and rake
